2003-10-03  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclBasic.c:   Fixed error in ref count management of command
        * generic/tclCmdMZ.c:   and execution traces that caused access to
        freed memory in trace-32.1.  [Bug 811483].

2003-10-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclTrace.c: Corrected comingling of introspection results of
	[trace info command] and [trace info execution].  [Bug 807243]
	Thanks to Mark Saye.

2003-10-01  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: fixed redo prebinding bug when DESTDIR="".
	* mac/tclMacResource.c: fixed possible NULL dereference (bdesgraupes).

2003-09-29  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclPathObj.c:
	* tests/fileName.test: fix to inconsistent handling of backslash
	path separators on Windows in 'file join' [Bug 813273]

2003-09-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclPathObj.c (TclNativePathInFilesystem,TclFSGetPathType): 
	* generic/tclIOUtil.c (TclNativeDupInternalRep,TclGetPathType): Rename
	to make sure function names won't interfere with other non-Tcl
	code (reported by George Staplin)

	TIP#121 IMPLEMENTATION FROM JOE MISTACHKIN

	* generic/tclEvent.c (Tcl_SetExitProc,Tcl_Exit): Implementation of
	application exit handler scheme.
	* generic/tcl.decls (Tcl_SetExitProc): Public declaration.
	* doc/Exit.3: Documentation of new API function.

	TIP#112 IMPLEMENTATION

	* generic/tclNamesp.c: Core of implementation.
	* generic/tclInt.h (Namespace,TclInvalidateNsCmdLookup): Add
	command list epoch counter and list of ensembles to namespace
	structure, and define a macro to ease update of the epoch
	counter.
	* generic/tclBasic.c (Tcl_CreateObjCommand,etc.): Update epoch
	counter when list of commands in a namespace changes.
	* generic/tclObj.c (TclInitObjSubsystem): Register ensemble
	subcommand type.
	* tests/namespace.test (42.1-47.6): Tests.
	* doc/namespace.n: Documentation.
